--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,7 +2,7 @@
     max-width: 1400px;
     display: flex;
     flex-direction: row;
-    padding: 30px 20px 0;
+    padding: 30px 20px;
     margin: 0 auto;
 
     .left-column {
