--- a/src/components/Modal/ModalAddCardView/modalAddCardView.scss
+++ b/src/components/Modal/ModalAddCardView/modalAddCardView.scss
@@ -13,7 +13,6 @@
 
     .input-balance {
         font-size: 2rem;
-        margin-bottom: 20px;
     }
 
     .inputs-row {
@@ -24,4 +23,32 @@
             flex: 1;
         }
     }
+
+    select {
+        margin-bottom: 28px;
+    }
+
+    .error {
+        color: $red;
+        text-align: center;
+        margin: 10px 0 20px;
+    }
+}
+
+.modal-btns {
+    &__btn {
+        &:disabled {
+            opacity: 0.5;
+        }
+    }
+}
+
+.confirm-label {
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.confirm-card {
+    margin: 15px 0;
 }
