--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -19,6 +19,12 @@
         padding: 20px;
         border-radius: 3px;
 
+        .content {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
         .modal-btns {
             display: flex;
             gap: 15px;
@@ -31,6 +37,10 @@
                 padding: 10px 0;
                 cursor: pointer;
                 transition: background 0.2s linear;
+
+                &:disabled {
+                    opacity: 0.5;
+                }
 
                 &:hover {
                     background-color: $bgHover;
