--- a/src/components/Goal/goal.scss
+++ b/src/components/Goal/goal.scss
@@ -1,4 +1,5 @@
 .goal {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -7,10 +8,31 @@
     background-color: $bg;
     padding: 20px 20px 15px;
     border-radius: 3px;
-    cursor: pointer;
+    cursor: default;
 
     &__title {
         font-size: 1.5rem;
+    }
+
+    &__remove-btn {
+        position: absolute;
+        top: 23px;
+        right: 30px;
+        opacity: 0;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        transition: opacity 0.2s linear;
+
+        svg {
+            path {
+                transition: fill 0.2s linear;
+            }
+        }
+
+        &:hover svg path {
+            fill: $red;
+        }
     }
 
     .value {
@@ -48,7 +70,6 @@
                     display: block;
                     width: 100%;
                     text-align: center;
-                    color: #fff;
                     font-size: 0.8rem;
                 }
             }
@@ -63,5 +84,9 @@
                 font-size: 0.8rem;
             }
         }
+    }
+
+    &:hover .goal__remove-btn {
+        opacity: 1;
     }
 }
