--- a/src/components/Modal/ModalAddCard/modalAddCard.scss
+++ b/src/components/Modal/ModalAddCard/modalAddCard.scss
@@ -24,17 +24,16 @@
         margin-bottom: 28px;
     }
 
+    .invalid {
+        background-color: rgba(255, 0, 0, 0.15);
+        border-radius: 3px;
+    }
+
     .error {
         color: $red;
         text-align: center;
         margin: 10px 0 20px;
     }
-}
-
-.confirm-label {
-    text-align: center;
-    font-weight: 700;
-    font-size: 1.2rem;
 }
 
 .confirm-card {
