--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -23,6 +23,17 @@
             height: 100%;
             display: flex;
             flex-direction: column;
+
+            &__title {
+                text-align: center;
+                font-weight: 700;
+                font-size: 1.5rem;
+            }
+
+            form {
+                display: flex;
+                flex-direction: column;
+            }
         }
 
         .modal-btns {
