--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -25,14 +25,51 @@
             flex-direction: column;
 
             &__title {
-                text-align: center;
+                text-align: left;
                 font-weight: 700;
                 font-size: 1.5rem;
             }
+        }
 
-            form {
-                display: flex;
-                flex-direction: column;
+        .input-form,
+        .select-form {
+            @include input;
+        }
+
+        .select-form {
+            margin-bottom: 28px;
+        }
+
+        label {
+            opacity: 0.8;
+            margin-bottom: 5px;
+        }
+
+        .invalid {
+            background-color: rgba(255, 0, 0, 0.15);
+            border-radius: 3px;
+        }
+
+        input[type="submit"] {
+            flex: 1;
+            font-size: 1rem;
+            background: $bg;
+            border: none;
+            border-radius: 3px;
+            padding: 10px 0;
+            cursor: pointer;
+            transition: background 0.2s linear;
+
+            &:disabled {
+                opacity: 0.5;
+            }
+
+            &:hover {
+                background-color: $bgHover;
+            }
+
+            &:active {
+                background-color: $bgActive;
             }
         }
 
