--- a/src/components/Goal/goal.scss
+++ b/src/components/Goal/goal.scss
@@ -8,6 +8,7 @@
     background-color: $bg;
     padding: 20px 20px 15px;
     border-radius: 3px;
+    transition: transform 0.2s linear;
     cursor: pointer;
 
     &__title {
@@ -65,7 +66,7 @@
         }
     }
 
-    &:hover .goal__remove-btn {
-        opacity: 1;
+    &:hover {
+        transform: translateY(-5px);
     }
 }
