--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,9 +4,11 @@ $bg: #f1f3f0;
 $bgHover: #e0e0e0;
 $bgActive: #d1d1d1;
 
+$lightText: #585858;
 $text: #333333;
 
 $red: #fc3030;
+$green: #75d36c;
 
 @mixin title {
     font-size: 2rem;
