--- a/src/components/Balance/balance.scss
+++ b/src/components/Balance/balance.scss
@@ -7,7 +7,7 @@
         cursor: default;
     }
 
-    .balance {
+    .balance-wrapper-balance {
         height: 180px;
         display: flex;
         flex-direction: column;
