--- a/src/components/Modal/ModalIncome/ModalIncomeExpense.scss
+++ b/src/components/Modal/ModalIncome/ModalIncomeExpense.scss
@@ -1,5 +1,5 @@
 .content {
-    .income-form {
+    .income-expense-form {
         display: flex;
         flex-direction: column;
         margin-bottom: 20px;
