--- a/src/components/History/history.scss
+++ b/src/components/History/history.scss
@@ -1,13 +1,19 @@
 .history {
+    height: 100%;
     &__title {
         @include title;
         margin-bottom: 30px;
     }
 
     .history-wrapper {
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+
         &__header {
+            height: 100%;
             display: flex;
-            justify-content: space-between;
             margin-bottom: 20px;
 
             .history-wrapper__title,
@@ -41,7 +47,11 @@
         &__list {
             display: flex;
             flex-direction: column;
+            flex: 2;
             gap: 20px;
+        }
+
+        &__footer {
         }
     }
 }
