--- a/src/components/ItemSelect/itemSelect.scss
+++ b/src/components/ItemSelect/itemSelect.scss
@@ -1,6 +1,8 @@
-.custom-select {
+.item-select {
     position: relative;
-    .custom-select-selected {
+    margin-bottom: 8px;
+
+    .item-select-selected {
         display: flex;
         justify-content: space-between;
         border: 1px solid $bgHover;
@@ -8,32 +10,27 @@
         padding: 15px;
         cursor: pointer;
         transition: background 0.3s linear;
-
-        .custom-select-selected__value {
-            font-weight: 700;
-            color: $green;
-        }
     }
 
-    .custom-select-dropdown {
+    .item-select-dropdown {
         position: absolute;
         width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 2;
 
-        .custom-select-dropdown__list {
+        .item-select-dropdown__list {
+            background-color: #fff;
+
             border-radius: 3px;
 
-            .custom-select-dropdown-item {
+            .item-select-dropdown-item {
                 display: flex;
                 justify-content: space-between;
                 border: 1px solid $bgHover;
                 padding: 15px;
                 background-color: #fff;
                 cursor: pointer;
-
-                &__value {
-                    font-weight: 700;
-                    color: $green;
-                }
 
                 &:hover {
                     background-color: $bgHover;
