--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,6 +7,9 @@
     margin: 0 auto;
 
     .left-column {
+        // height: fit-content;
+        // position: sticky;
+        // top: 30px;
         min-width: 390px;
         margin-right: 30px;
     }
