--- a/src/components/History/history.scss
+++ b/src/components/History/history.scss
@@ -1,5 +1,6 @@
 .history {
     height: 100%;
+
     &__title {
         @include title;
         margin-bottom: 30px;
@@ -14,7 +15,7 @@
         &__header {
             height: 100%;
             display: flex;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
 
             .history-wrapper__title,
             .history-wrapper__category,
@@ -45,10 +46,10 @@
         }
 
         &__list {
+            min-height: 400px;
             display: flex;
             flex-direction: column;
-            flex: 2;
-            gap: 20px;
+            margin-bottom: 30px;
         }
 
         &__footer {
