--- a/src/components/HistoryItem/historyItem.scss
+++ b/src/components/HistoryItem/historyItem.scss
@@ -1,6 +1,8 @@
 .history-wrapper-item {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid $bg;
+    padding: 16px 0;
 
     .history-wrapper-item__title {
         flex: 2;
