--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -30,6 +30,60 @@
                 font-size: 1.5rem;
                 margin-bottom: 15px;
             }
+
+            .content-form {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 20px;
+
+                &__label {
+                    color: $lightText;
+                    margin-bottom: 5px;
+                }
+
+                &__input {
+                    font-size: 1rem;
+                    outline: none;
+                    border: 1px solid $bgHover;
+                    border-radius: 3px;
+                    padding: 15px;
+                    margin-bottom: 8px;
+
+                    &_invalid {
+                        background-color: rgba(255, 0, 0, 0.15);
+                        border-radius: 3px;
+                    }
+                }
+
+                &__error {
+                    text-align: center;
+                    color: $red;
+                    margin-bottom: 8px;
+                }
+
+                &__submit {
+                    flex: 1;
+                    background: $bg;
+                    border: none;
+                    border-radius: 3px;
+                    padding: 10px 0;
+                    margin-top: 20px;
+                    cursor: pointer;
+                    transition: background 0.2s linear;
+
+                    &:disabled {
+                        opacity: 0.5;
+                    }
+
+                    &:hover {
+                        background-color: $bgHover;
+                    }
+
+                    &:active {
+                        background-color: $bgActive;
+                    }
+                }
+            }
         }
 
         .input-form,
