--- a/src/components/Balance/balance.scss
+++ b/src/components/Balance/balance.scss
@@ -8,6 +8,7 @@
     }
 
     .balance-wrapper-balance {
+        position: relative;
         height: 180px;
         display: flex;
         flex-direction: column;
