--- a/src/components/History/history.scss
+++ b/src/components/History/history.scss
@@ -52,7 +52,11 @@
             margin-bottom: 30px;
         }
 
-        &__footer {
+        .history__not-found {
+            font-size: 22px;
+            font-weight: 700;
+            color: $bgActive;
+            text-align: center;
         }
     }
 }
