--- a/src/components/History/history.scss
+++ b/src/components/History/history.scss
@@ -52,7 +52,27 @@
             margin-bottom: 30px;
         }
 
-        .history__not-found {
+        &__more {
+            background-color: $bg;
+
+            border: none;
+            border-radius: 3px;
+
+            padding: 15px;
+
+            transition: 0.2s linear;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $bgHover;
+            }
+
+            &:active {
+                background-color: $bgActive;
+            }
+        }
+
+        &__label {
             font-size: 22px;
             font-weight: 700;
             color: $bgActive;
