--- a/src/components/ControlButtons/controlButtons.scss
+++ b/src/components/ControlButtons/controlButtons.scss
@@ -1,18 +1,24 @@
 .control-btns-wrapper {
     display: flex;
     gap: 10px;
-    margin-bottom: 30px;
+
+    margin-top: 20px;
 
     &__btn {
         height: 50px;
+
         display: flex;
         justify-content: center;
         align-items: center;
         flex: 1;
-        font-size: 1.1rem;
+
+        font-size: 1rem;
+
         background-color: $bg;
+
         border: none;
         border-radius: 3px;
+
         cursor: pointer;
         transition: background 0.2s linear;
 
@@ -21,6 +27,8 @@
         }
 
         span {
+            color: $text;
+
             &::before {
                 display: inline-block;
                 width: 14px;
