--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,20 +1,55 @@
 .App {
     max-width: 1400px;
+    min-width: 320px;
     min-height: 100%;
+
     display: flex;
     flex-direction: row;
+
+    gap: 20px;
+
     padding: 30px 20px;
     margin: 0 auto;
 
+    box-sizing: border-box;
+
     .left-column {
-        // height: fit-content;
-        // position: sticky;
-        // top: 30px;
         min-width: 390px;
-        margin-right: 30px;
     }
 
     .right-column {
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .App {
+        flex-direction: column;
+
+        .left-column {
+            display: flex;
+            flex-direction: row;
+
+            gap: 20px;
+
+            .balance-wrapper,
+            .cards-wrapper {
+                flex: 1;
+            }
+
+            .balance-wrapper {
+                margin-bottom: 0;
+            }
+        }
+
+        .right-column {
+            margin-top: 30px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .App {
+        padding: 30px 5px;
     }
 }
