--- a/src/components/Balance/balance.scss
+++ b/src/components/Balance/balance.scss
@@ -1,28 +1,44 @@
 .balance-wrapper {
     margin-bottom: 20px;
 
+    box-sizing: border-box;
+
     &__title {
         @include title;
-        margin-bottom: 30px;
+
         cursor: default;
     }
 
     .balance-wrapper-balance {
         position: relative;
+
         height: 180px;
+
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        font-family: "Roboto", Arial, sans-serif;
+
         background-color: $bg;
-        padding: 20px 30px 15px;
+
         border-radius: 3px;
 
+        padding: 20px 30px 15px;
+        margin-top: 30px;
+
+        box-sizing: border-box;
+
         &__title {
+            color: $text;
             font-size: 1.5rem;
             font-weight: 400;
+
+            margin: 0;
         }
 
         &__value {
+            color: $text;
             font-size: 2.5rem;
             font-weight: 700;
 
@@ -35,6 +51,20 @@
                 color: $bgActive;
                 font-size: 2.5rem;
                 font-weight: 700;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .balance-wrapper {
+        .balance-wrapper-balance {
+            &__value {
+                font-size: clamp(2rem, 8vw, 2.5rem);
+
+                .float {
+                    font-size: clamp(2rem, 8vw, 2.5rem);
+                }
             }
         }
     }
