--- a/src/components/BalanceToggles/balanceToggles.scss
+++ b/src/components/BalanceToggles/balanceToggles.scss
@@ -1,16 +1,24 @@
 .balance-wrapper-balance-control-btns {
     display: flex;
     justify-content: space-between;
-    gap: 15px;
+
+    gap: 10px;
 
     &__btn {
+        height: 30px;
+
         flex: 1;
         gap: 5px;
+
+        font-family: "Roboto", Arial, sans-serif;
         font-weight: 300;
+        font-size: 16px;
+
         background-color: transparent;
+
         border: none;
         border-radius: 3px;
-        padding: 7px 0;
+
         transition: 0.2s linear;
         cursor: pointer;
 
@@ -20,6 +28,14 @@
 
         &:hover {
             background-color: $bgHover;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .balance-wrapper-balance-control-btns {
+        &__btn {
+            height: 40px;
         }
     }
 }
