--- a/src/components/Modal/ModalError/modalError.scss
+++ b/src/components/Modal/ModalError/modalError.scss
@@ -2,6 +2,8 @@
     &__error-message {
         font-size: 1.5rem;
         text-align: center;
+        color: $text;
+
         padding: 5px 0 20px 0;
     }
 }
