--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -1,22 +1,32 @@
 .modal-overlay {
     display: grid;
+
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+
     background-color: rgba(0, 0, 0, 0.6);
+
     margin: auto;
+
+    z-index: 2;
 
     .modal {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        place-self: center;
+
         width: 340px;
         height: auto;
-        place-self: center;
+
         background-color: #fff;
+
         padding: 20px;
+
         border-radius: 3px;
 
         .content {
@@ -24,17 +34,21 @@
             display: flex;
             flex-direction: column;
 
+            font-family: "Roboto", Arial, sans-serif;
+
             &__title {
                 text-align: left;
                 font-weight: 700;
                 font-size: 1.5rem;
-                margin-bottom: 15px;
+
+                margin: 0 0 15px 0;
             }
 
             .content-form {
                 display: flex;
                 flex-direction: column;
-                margin-bottom: 20px;
+
+                margin-bottom: 10px;
 
                 &__label {
                     color: $lightText;
@@ -43,9 +57,11 @@
 
                 &__input {
                     font-size: 1rem;
+
                     outline: none;
                     border: 1px solid $bgHover;
                     border-radius: 3px;
+
                     padding: 15px;
                     margin-bottom: 8px;
 
@@ -58,16 +74,24 @@
                 &__error {
                     text-align: center;
                     color: $red;
-                    margin-bottom: 8px;
+                    margin: 0 0 8px 0;
                 }
 
                 &__submit {
                     flex: 1;
+
                     background: $bg;
+
+                    font-family: "Roboto", Arial, sans-serif;
+                    font-size: 1rem;
+                    color: $text;
+
                     border: none;
                     border-radius: 3px;
+
                     padding: 10px 0;
                     margin-top: 20px;
+
                     cursor: pointer;
                     transition: background 0.2s linear;
 
@@ -106,10 +130,18 @@
 
             &__btn {
                 flex: 1;
+
                 background: $bg;
+
+                font-family: "Roboto", Arial, sans-serif;
+                font-size: 1rem;
+                color: $text;
+
                 border: none;
                 border-radius: 3px;
+
                 padding: 10px 0;
+
                 cursor: pointer;
                 transition: background 0.2s linear;
 
